   changed. If option --long is set, a table with 5 IDs (DISC, BOOT, TICKET,
   TMD and WBFS) is printed. BOOT, TICKET and TMD IDs are taken from the main
   partition. If --long is set twice, all IDs of all partitions are printed.
 - wwt LLLL: List contains date and time (in seconds) columns.


wit v2.05a r3591 - 2012-04-14

 - "wit VERIFY" will now ignore extracted file systems.
 - wit --id=.....X: ID change failed if only the sixt character was modified.
 - All ID patching options (--id, --disc-id, ...) accept now a plus sign '+' as
   wildcard for multiple '.' to fill the complete entered ID to 4/6 characters.
 - The listing command "wit ID6" accepts now all ID patching options to test
   the effect of them.


wit v2.05b r3611 - 2012-04-20

 - Bug fix for assertion failure in "wwt RECOVER".


@@MODULE(last-history.txt)@@

Road map (for some point in the future):

 I have already stopped the development in favor of my SZS tools. But there
 are some already planned extensions:

 - GameCube support is still incomplete.
    - Creation of GameCube disc is not possible.

 - There are already code fragments implemented to trim discs in three levels:
    - Move partitions as whole to eliminate disc holes.
    - Move partition sectors to reduce partition size (alternative for
      partition scrubbing). Fake signing is necessary.
    - Move files of partitons to optimize the step above a little.
   For all trimming levels alignment factors may be set and it should be
   possible to set special alignments for GameCube sound files.

 - On the fly patching: Create a new image as combination of 2 or more sources.
   Therefor trimming (sector or file level) is needed.


*******************************************************************************
*******                              END                                *******
*******************************************************************************